--- a/WeAdmin/index.html
+++ b/WeAdmin/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>后台管理-WeAdmin Frame型后台管理系统-WeAdmin 1.0</title>
+		<title>用户登录-互联网室统一运维工具Web版-HlwOpsWebTool 1.0</title>
 		<meta name="renderer" content="webkit|ie-comp|ie-stand">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -19,7 +19,7 @@
 		<!-- 顶部开始 -->
 		<div class="container">
 			<div class="logo">
-				<a href="./index.html">WeAdmin v1.0</a>
+				<a href="./index.html">HlwOpsWebTool v1.0</a>
 			</div>
 			<div class="left_open">
 				<i title="展开左侧栏" class="iconfont">&#xe699;</i>
@@ -29,12 +29,6 @@
 					<a href="javascript:;">+新增</a>
 					<dl class="layui-nav-child">
 						<!-- 二级菜单 -->
-						<dd>
-							<a onclick="WeAdminShow('资讯','https://www.youfa365.com/')"><i class="iconfont">&#xe6a2;</i>资讯</a>
-						</dd>
-						<dd>
-							<a onclick="WeAdminShow('图片','http://www.baidu.com')"><i class="iconfont">&#xe6a8;</i>图片</a>
-						</dd>
 						<dd>
 							<a onclick="WeAdminShow('用户','https://www.youfa365.com/')"><i class="iconfont">&#xe6b8;</i>用户</a>
 						</dd>
@@ -58,7 +52,7 @@
 					</dl>
 				</li>
 				<li class="layui-nav-item to-index">
-					<a href="/">前台首页</a>
+					<a href="./index.html">前台首页</a>
 				</li>
 			</ul>
 
