--- a/WeAdmin/login.html
+++ b/WeAdmin/login.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="./static/css/font.css">
 	<link rel="stylesheet" href="./static/css/weadmin.css">
     <script src="./lib/layui/layui.js" charset="utf-8"></script>
-
 </head>
 <body class="login-bg">
     
@@ -29,12 +28,13 @@
         </form>
     </div>
 
-    <script src='../lib/jquery/jquery.js'></script>
     <script type="text/javascript">
+        // require('jquery');
         layui.extend({
 			admin: '{/}./static/js/admin'
 		});
-        layui.use(['form','admin'], function(){
+        layui.use(['form','admin', 'jquery'], function(){
+            var $= layui.jquery;
             var form = layui.form
             ,admin = layui.admin;
             //监听提交
@@ -43,16 +43,13 @@
                 // layer.msg(JSON.stringify(data.field),function(){
                 //     location.href='./index.html'
                 // });
-                $.post("/login", data, function(result){
-                    layer.msg(JSON.stringify(result));
+                console.log($('.message').val());
+                $.post('/login', function (res) {
+                    console.log(JSON.stringify(res));
                 });
                 return false;
             });
         });   
-    </script>
-    
-    <script>
-        require('../service/express.js');
     </script>
 </body>
 </html>
